--- a/package.json
+++ b/package.json
@@ -6,4 +6,12 @@
     "express": "^4.18.2",
     "body-parser": "^1.20.2"
   }
+  {
+  "dependencies": {
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "axios": "^1.6.0"
+  }
+}
+
 }
